<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="club.plus1.i2i.router.UserRouter" />
        <variable
            name="viewModel"
            type="club.plus1.i2i.presenter.UserListModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="club.plus1.i2i.view.UserEditActivity">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.name}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:text="@={viewModel.phone}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:onClick="@{() -> UserRouter.onSave(viewModel)}"/>

        <Button
            android:id="@+id/buttonChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_chat"
            android:onClick="@{(view) -> UserRouter.onChat(view)}"/>
    </LinearLayout>
</layout>
